# MutationDiseq

./: .gitignore  .hgignore  .hgtags  README.md  noxfile.py  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci-cogent3-dev.yml  ci.yml  linters.yml  release.yml
src/: __init__.py
src/kath_library/: __init__.py  bootstrap.py  controls.py  convergence.py  eop.py  generate.py  jsd.py  lrt.py  model.py  result.py  stationary_pi.py  t50.py
src/kath_library/alt_methods/: squartini_arndt.py
src/kath_library/utils/: numeric_utils.py  utils.py
src/mdeq/: __init__.py  _block_threading.py  _click_options.py  adjacent.py  bootstrap.py  control.py  convergence.py  eop.py  jsd.py  lrt.py  model.py  numeric.py  sqlite_data_store.py  stationary_pi.py  t50.py  toe.py  utils.py
src/mdeq/utils/: numeric_utils.py  utils.py
tests/: test_adjacent.py  test_alt_methods.py  test_bootstrap.py  test_cli.py  test_control.py  test_convergence.py  test_eop.py  test_jsd.py  test_lrt.py  test_model.py  test_numeric_utils.py  test_sqlite_data_store.py  test_stationary_pi.py  test_t50.py  test_toe.py  test_utils.py
tests/data/: 3000bp.sqlitedb  3000bp.tinydb  300bp.sqlitedb  300bp.tinydb  4otu-aligns.sqlitedb  4otu-aligns.tinydb  aeop-apes.sqlitedb  aeop-apes.tinydb  apes-align.sqlitedb  apes-align.tinydb  fg_GSN_synthetic-lo_lo-300bp-1rep.sqlitedb  fg_GSN_synthetic-lo_lo-300bp-1rep.tinydb  gene_order.tsv  hedenfalk_pvals.txt  mcr.tinydb  non_converging.sqlitedb  non_converging.tinydb  teop-apes.sqlitedb  teop-apes.tinydb  toe-300bp.sqlitedb  toe-300bp.tinydb
tests/data/old-sqlitedbs/: 3000bp.sqlitedb  apes-align.sqlitedb  toe-300bp.sqlitedb
