[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mdeq"
author = "Katherine Caley"
author-email = "katherine.caley@anu.edu.au"
keywords = "biology, genomics, statistics, phylogeny, evolution, bioinformatics"
description-file = "README.md"
license = "BSD-3"
requires-python = ">=3.9"
requires = ["cogent3", "click", "accupy", "scipy"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
    ]

[tool.flit.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[tool.flit.scripts]
mdeq = "mdeq:main"

[tool.flit.metadata.requires-extra]
dev = ["black",
       "click",
       "docformatter",
       "flit",
       "isort"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | doc
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
